# toy_compiler

./: CMakeLists.txt  README.md
compiler/: lexer.cpp  lexer.l  parser.cpp  parser.h  parser.y  parser_utils.cpp  parser_utils.h
compiler/math_module/: division.mr  multiplication.mr
examples/: program0.imp  program1.imp
examples/my_examples/: DIVISION.mr  JUMPS.mr  MULTIPLICATION.mr  program0.imp  program0.mr  program1.imp
tests/: example0.imp  exampleA.imp
